# LunaCore

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml  export_script.sh  gh_seed_lunacore.sh  issues_seed_min.sh  phase0_bootstrap.sh  pyproject.toml  requirements-dev.txt  requirements.txt
core/: agent_types.py  artifacts.py  events.py  logging.py  task_graph.py  telemetry.py
dashboard/: package-lock.json  package.json
docs/: ARCHITECTURE.md  CONTRIBUTING.md  COPILOT_USAGE.md  DECISIONS.md  DEPENDENCIES.md  DEVELOPMENT.md  EXPORTS.md  HANDOFF.md  HEALTH.md  MASTER_IDENTITE.md  MASTER_IDENTITE.txt  OPS.md  PHASES_FULL.md  ROADMAP.md  SETUP.md  SETUP_DEPENDENCIES.md  STATUS_PHASE1.md  WORKFLOWS.md  event_bus.md  governance.md  memory.md  orchestrator.md
examples/: plan.sample.yaml
export/: lunacore_phase1_export_20250830_200025.txt
orchestrator/: __init__.py  app.py  escalation_manager.py  execution_orchestrator.py  parallel_executor.py
schemas/: agent_registry.schema.json  task_graph.schema.json
scripts/: README_exports.md  bench_event_bus.py  bootstrap_dev.sh  build_phase_index.py  cleanup_branches.sh  copy_master_identite.sh  deps_table.sh  enable_hooks.sh  gen_agent_schema.py  labels_seed_extra.sh
services/: __init__.py
tests/: test_ab_testing.py  test_agent_registry.py  test_agent_registry_v2.py  test_agent_schema.py  test_agent_signing.py  test_audit.py  test_costing.py  test_creative_agent.py  test_escalation.py  test_event_bus.py  test_event_bus_perf.py  test_event_bus_v2.py  test_execution_orchestrator.py  (+14 more)
(+57 files in other folders)
